--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@
   }
 .button:hover {
    
-    background-color: #ff7b00;
+    background-color: white;
     color: #000;
     transition: all .6s;
   }
